2001-05-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-find-coding-system): New function to replace
	`find-coding-system'.
	(w3m-charset-to-coding-system): Use `w3m-find-coding-system'.
	(make-ccl-coding-system): Removed.
	(toplevel) [emacs20, emacs21]: Removed dependency on `pccl'.

2001-05-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (toplevel): Fix condition for (require 'pccl).

2001-05-24  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-charset-to-coding-system): Simplified.
	(make-ccl-coding-system) [XEmacs, Mule]: Removed.

2001-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m-region): Use `w3m-display-inline-image-p'.
	(w3m-goto-url): Ditto.
	(w3m-display-inline-image-p): New function.
	* w3m-xmas.el (w3m-display-inline-image-p): New function.
	* w3m-e21.el (w3m-display-inline-image-p): New function.

2001-05-24  Akihiro Arisawa  <ari@mbf.sphere.ne.jp>

	* shimbun/sb-mhonarc.el: Added `revers-flag' and `litemplate-regexp'
	slot.
	Define internal accessor.
	(shimbun-mhonarc-litemplate-regexp): New variable.
	(initialize-instance): New method.
	(shimbun-get-headers): New method.
	(shimbun-mhonarc-extract-header-values): New macro.
	(shimbun-mhonarc-get-headers): New function.

	* shimbun/sb-meadow.el: New file.

	* shimbun/sb-namazu.el (shimbun-namazu-reverse-flag): New variable.
	(shimbun-namazu-litemplate-regexp): New variable.
	(shimbun-get-headers): Use `shimbun-mhonarc-get-headers' instead of
	`shimbun-namazu-get-headers-1'
	(shimbun-namazu-get-headers-1): Removed.

2001-05-24  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (toplevel): Define make-ccl-coding-system() myself, when
	failed (require 'pccl).

2001-05-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m.el (w3m): Made it can be called non-interactively or a batch
	job.

	* w3m.el (w3m-goto-url): Add autoload magic cookie.
	* w3m-weather.el (w3m-about-weather, w3m-weather): Ditto.
	* w3m-search.el (w3m-search): Ditto.